--- a/index.html
+++ b/index.html
@@ -9,6 +9,15 @@
       content="A vertical timeline website of every public/released ALICAI project fitting the ALICAI brand"
     />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+
+    <!-- Google Fonts -->
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;1,100;1,200;1,300;1,400;1,500;1,600&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="styles.css" />
   </head>
   <body>
@@ -17,7 +26,7 @@
       <h3>Release Timeline</h3>
     </header>
 
-    <div class="wrapper">
+    <div class="container">
       <ul class="timeline">
         <li>
           <details class="panel">
@@ -25,48 +34,54 @@
               ALICAI x NO HOPE. - THUNDERBIRD
               <h5>August 31, 2022</h5>
             </summary>
-            <p>
-              An original collaboration heavily inspired by the music artist
-              <i>LORN</i> produced within 24 hours during the
-              <a href="https://anv7.artbyform.com/" target="_blank"
-                >FORM All Nighter Vol. 7</a
-              >
-              charity event on August 6th, 2022. The majority of the arrangement
-              and mixing/mastering was completed by myself, as well as the cover
-              art and visualizer.
-            </p>
-            <iframe
-              width="1006"
-              height="755"
-              src="https://www.youtube.com/embed/CHGhbEFCTqw"
-              title="ALICAI x NO HOPE. - THUNDERBIRD"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen
-            ></iframe>
+            <div class="info">
+              <p>
+                An original collaboration heavily inspired by the music artist
+                <i>LORN</i> produced within 24 hours during the
+                <a href="https://anv7.artbyform.com/" target="_blank"
+                  >FORM All Nighter Vol. 7</a
+                >
+                charity event on August 6th, 2022. The majority of the
+                arrangement and mixing/mastering was completed by myself, as
+                well as the cover art and visualizer.
+              </p>
+              <iframe
+                width="1006"
+                height="755"
+                src="https://www.youtube.com/embed/CHGhbEFCTqw"
+                title="ALICAI x NO HOPE. - THUNDERBIRD"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
+            </div>
           </details>
         </li>
+
         <li>
           <details class="panel">
             <summary>
               PINEO & LOEB - Attached 2 U (ALICAI Remix)
               <h5>March 25, 2022</h5>
             </summary>
-            <p>
-              Official remix for <i>PINEO & LOEB</i>`s single “Attached 2 U”
-              featuring Billboard-charting artist <i>Viiq</i>. My remix is part
-              of a
-              <a
-                href="https://open.spotify.com/album/0l8g7ZSudlWfv5focmGRUh?si=NtHWpRfrQyaHtRmgaC4D2A&nd=1"
-                target="_blank"
-                >remix EP</a
-              >
-              featuring the artists <i>OBLVYN</i> (releases with
-              <i>Monstercat</i> and <i>NoCopyrightSounds</i>), <i>Stund</i>, and
-              <i>Joel Freck</i>.
-            </p>
+            <div class="info">
+              <p>
+                Official remix for <i>PINEO & LOEB</i>`s single “Attached 2 U”
+                featuring Billboard-charting artist <i>Viiq</i>. My remix is
+                part of a
+                <a
+                  href="https://open.spotify.com/album/0l8g7ZSudlWfv5focmGRUh?si=NtHWpRfrQyaHtRmgaC4D2A&nd=1"
+                  target="_blank"
+                  >remix EP</a
+                >
+                featuring the artists <i>OBLVYN</i> (releases with
+                <i>Monstercat</i> and <i>NoCopyrightSounds</i>), <i>Stund</i>,
+                and <i>Joel Freck</i>.
+              </p>
+            </div>
           </details>
         </li>
+
         <li>
           <details class="panel">
             <summary>
@@ -74,96 +89,107 @@
               Remix)
               <h5>July 9, 2021</h5>
             </summary>
-            <p>
-              Unofficial 80s Ballad/Synthpop Anthem remix of “drivers license”
-              by <i>Olivia Rodrigo</i>. This remix has been publicly supported
-              by songwriter/producer
-              <i
-                ><a
-                  href="https://artists.spotify.com/songwriter/7d2yXAKnjoVwceBuSsuQHV"
-                  target="_blank"
-                  >Vaughn Oliver.</a
-                ></i
-              >
-            </p>
-            <iframe
-              scrolling="no"
-              frameborder="no"
-              allow="autoplay"
-              src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1084286662&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"
-            ></iframe>
+            <div class="info">
+              <p>
+                Unofficial 80s Ballad/Synthpop Anthem remix of “drivers license”
+                by <i>Olivia Rodrigo</i>. This remix has been publicly supported
+                by songwriter/producer
+                <i
+                  ><a
+                    href="https://artists.spotify.com/songwriter/7d2yXAKnjoVwceBuSsuQHV"
+                    target="_blank"
+                    >Vaughn Oliver.</a
+                  ></i
+                >
+              </p>
+              <iframe
+                scrolling="no"
+                frameborder="no"
+                allow="autoplay"
+                src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/1084286662&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"
+              ></iframe>
+            </div>
           </details>
         </li>
+
         <li>
           <details class="panel">
             <summary>
               Madeon - The Prince (ALICAI Remix)
               <h5>Dec 31, 2020</h5>
             </summary>
-            <p>
-              Unofficial remix of “The Prince” by <i>Madeon</i>. Everything in
-              the video (aside from the intro logo ident visuals) was produced
-              by myself in Adobe After Effects. This project has been publicly
-              supported by the artist
-              <i>
-                <a
-                  href="https://open.spotify.com/artist/3ZLe7OttXFn3JOPVZ9Vrr0"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  >PYLOT</a
-                > </i
-              >.
-            </p>
-            <iframe
-              src="https://www.youtube.com/embed/WYPYXk1ssYs"
-              title="YouTube video player"
-              frameborder="0"
-              allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
-              allowfullscreen
-            ></iframe>
+            <div class="info">
+              <p>
+                Unofficial remix of “The Prince” by <i>Madeon</i>. Everything in
+                the video (aside from the intro logo ident visuals) was produced
+                by myself in Adobe After Effects. This project has been publicly
+                supported by the artist
+                <i>
+                  <a
+                    href="https://open.spotify.com/artist/3ZLe7OttXFn3JOPVZ9Vrr0"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >PYLOT</a
+                  > </i
+                >.
+              </p>
+              <iframe
+                src="https://www.youtube.com/embed/WYPYXk1ssYs"
+                title="YouTube video player"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
+            </div>
           </details>
         </li>
+
         <li>
           <details class="panel">
             <summary>
               GUNSHIP - The Drone Racing League [ALICAI Remix (feat. Sparkee)]
               <h5>October 13, 2019</h5>
             </summary>
-            <p>
-              My entry to the <i>GUNSHIP - The Drone Racing League</i> Remix
-              Competition featuring a guitar solo by
-              <i
-                ><a
-                  href="https://open.spotify.com/artist/0DgTGEWTk0pHJ3SB0tDzzf"
-                  target="_blank"
-                  rel="noopener noreferrer"
-                  >Sparkee</a
-                ></i
-              >.
-            </p>
-            <iframe
-              scrolling="no"
-              frameborder="no"
-              allow="autoplay"
-              src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/692403739&color=%23141726&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"
-            ></iframe>
+            <div class="info">
+              <p>
+                My entry to the <i>GUNSHIP - The Drone Racing League</i> Remix
+                Competition featuring a guitar solo by
+                <i
+                  ><a
+                    href="https://open.spotify.com/artist/0DgTGEWTk0pHJ3SB0tDzzf"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >Sparkee</a
+                  ></i
+                >.
+              </p>
+              <iframe
+                scrolling="no"
+                frameborder="no"
+                allow="autoplay"
+                src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/692403739&color=%23141726&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"
+              ></iframe>
+            </div>
           </details>
         </li>
+
         <li>
           <details class="panel">
             <summary>
               ALICAI - Firestorm
               <h5>December 4, 2018</h5>
             </summary>
-            <p>Where it all started...</p>
-            <iframe
-              class="spotify"
-              src="https://open.spotify.com/embed/track/1uzfGHMEIZbxuyiXZYRpw6?utm_source=generator"
-              frameborder="0"
-              allowfullscreen=""
-              allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-              loading="lazy"
-            ></iframe>
+            <div class="info">
+              <p>Where it all started...</p>
+              <iframe
+                class="spotify"
+                src="https://open.spotify.com/embed/track/1uzfGHMEIZbxuyiXZYRpw6?utm_source=generator"
+                frameborder="0"
+                allowfullscreen=""
+                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
+                loading="lazy"
+              ></iframe>
+            </div>
           </details>
         </li>
       </ul>
