--- a/index.html
+++ b/index.html
@@ -37,13 +37,21 @@
             <div class="info">
               <p>
                 An original collaboration heavily inspired by the music artist
-                <i>LORN</i> produced within 24 hours during the
+                <i>
+                  <a
+                    href="https://open.spotify.com/artist/1PmVyfIR9KtCxbHWuga8E5"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >Lorn</a
+                  ></i
+                >
+                produced within 24 hours during the
                 <a href="https://anv7.artbyform.com/" target="_blank"
                   >FORM All Nighter Vol. 7</a
                 >
-                charity event on August 6th, 2022. The majority of the
-                arrangement and mixing/mastering was completed by myself, as
-                well as the cover art and visualizer.
+                charity event on August 6th, 2022. The majority of foreground
+                elements, arrangement, and mixing/mastering was completed by
+                myself, as well as the cover art and visualizer.
               </p>
               <iframe
                 width="1006"
@@ -75,9 +83,27 @@
                   >remix EP</a
                 >
                 featuring the artists <i>OBLVYN</i> (releases with
-                <i>Monstercat</i> and <i>NoCopyrightSounds</i>), <i>Stund</i>,
-                and <i>Joel Freck</i>.
+                <a
+                  href="https://www.youtube.com/c/monstercatinstinct"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  ><i>Monstercat</i></a
+                >
+                and
+                <a
+                  href="https://www.youtube.com/c/NoCopyrightSounds"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  ><i>NoCopyrightSounds</i></a
+                >), <i>Stund</i>, and <i>Joel Freck</i>.
               </p>
+              <iframe
+                src="https://www.youtube.com/embed/IWOWJCxK0B0"
+                title="Attached 2 U (ALICAI Remix)"
+                frameborder="0"
+                allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture"
+                allowfullscreen
+              ></iframe>
             </div>
           </details>
         </li>
@@ -91,16 +117,20 @@
             </summary>
             <div class="info">
               <p>
-                Unofficial 80s Ballad/Synthpop Anthem remix of “drivers license”
-                by <i>Olivia Rodrigo</i>. This remix has been publicly supported
-                by songwriter/producer
+                Unofficial 80s Ballad/Synthpop Anthem remix of
+                <a
+                  href="https://open.spotify.com/track/5wANPM4fQCJwkGd4rN57mH?si=a138c08f6f46490b"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >“drivers license” by <i>Olivia Rodrigo</i></a
+                >. This remix has been publicly supported by songwriter/producer
                 <i
                   ><a
                     href="https://artists.spotify.com/songwriter/7d2yXAKnjoVwceBuSsuQHV"
                     target="_blank"
-                    >Vaughn Oliver.</a
+                    >Vaughn Oliver</a
                   ></i
-                >
+                >.
               </p>
               <iframe
                 scrolling="no"
@@ -116,14 +146,19 @@
           <details class="panel">
             <summary>
               Madeon - The Prince (ALICAI Remix)
-              <h5>Dec 31, 2020</h5>
+              <h5>December 31, 2020</h5>
             </summary>
             <div class="info">
               <p>
-                Unofficial remix of “The Prince” by <i>Madeon</i>. Everything in
-                the video (aside from the intro logo ident visuals) was produced
-                by myself in Adobe After Effects. This project has been publicly
-                supported by the artist
+                Unofficial remix of
+                <a
+                  href="https://open.spotify.com/album/15WqeQxvjsgr5rF53qgR9p"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  >“The Prince” by <i>Madeon</i></a
+                >. Everything in the video (aside from the intro logo ident
+                visuals) was produced by myself in Adobe After Effects. This
+                project has been publicly supported by the music artist
                 <i>
                   <a
                     href="https://open.spotify.com/artist/3ZLe7OttXFn3JOPVZ9Vrr0"
@@ -152,8 +187,14 @@
             </summary>
             <div class="info">
               <p>
-                My entry to the <i>GUNSHIP - The Drone Racing League</i> Remix
-                Competition featuring a guitar solo by
+                My entry to the
+                <a
+                  href="https://open.spotify.com/track/3TjBuYxZqsO5jirM0rujRO"
+                  target="_blank"
+                  rel="noopener noreferrer"
+                  ><i>GUNSHIP - The Drone Racing League</i></a
+                >
+                Remix Competition featuring a guitar solo by
                 <i
                   ><a
                     href="https://open.spotify.com/artist/0DgTGEWTk0pHJ3SB0tDzzf"
@@ -182,12 +223,10 @@
             <div class="info">
               <p>Where it all started...</p>
               <iframe
-                class="spotify"
-                src="https://open.spotify.com/embed/track/1uzfGHMEIZbxuyiXZYRpw6?utm_source=generator"
-                frameborder="0"
-                allowfullscreen=""
-                allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture"
-                loading="lazy"
+                scrolling="no"
+                frameborder="no"
+                allow="autoplay"
+                src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/537785436&color=%23ff5500&auto_play=false&hide_related=false&show_comments=true&show_user=true&show_reposts=false&show_teaser=true&visual=true"
               ></iframe>
             </div>
           </details>
