--- a/index.html
+++ b/index.html
@@ -74,9 +74,23 @@
             </summary>
             <div class="info">
               <p>
-                Official remix for <i>PINEO & LOEB</i>`s single “Attached 2 U”
-                featuring Billboard-charting artist <i>Viiq</i>. My remix is
-                part of a
+                Official remix for
+                <i
+                  ><a
+                    href="https://open.spotify.com/artist/7LildCOU5me58NKlvsLVRI"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >PINEO & LOEB</a
+                  ></i
+                >`s single “Attached 2 U” featuring Billboard-charting artist
+                <i
+                  ><a
+                    href="https://open.spotify.com/artist/4hHvJgsm5erOOP97SBJ8uQ"
+                    target="_blank"
+                    rel="noopener noreferrer"
+                    >Viiq</a
+                  ></i
+                >. My remix is part of a
                 <a
                   href="https://open.spotify.com/album/0l8g7ZSudlWfv5focmGRUh?si=NtHWpRfrQyaHtRmgaC4D2A&nd=1"
                   target="_blank"
@@ -117,7 +131,7 @@
             </summary>
             <div class="info">
               <p>
-                Unofficial 80s Ballad/Synthpop Anthem remix of
+                An 80s Ballad/Synthpop Anthem remix of
                 <a
                   href="https://open.spotify.com/track/5wANPM4fQCJwkGd4rN57mH?si=a138c08f6f46490b"
                   target="_blank"
@@ -150,7 +164,7 @@
             </summary>
             <div class="info">
               <p>
-                Unofficial remix of
+                My remix of
                 <a
                   href="https://open.spotify.com/album/15WqeQxvjsgr5rF53qgR9p"
                   target="_blank"
