--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
       <h3>Release Timeline</h3>
     </header>
 
+    <div id="bg-noise-vid-div">
+      <video autoplay muted loop id="bg-noise-vid">
+        <source src="media/bg-noise.mp4" type="video/mp4" />
+      </video>
+    </div>
+
     <div class="container">
       <ul class="timeline">
         <li>
@@ -248,6 +254,6 @@
       </ul>
     </div>
 
-    <script src="" async defer></script>
+    <script src="index.js" async defer></script>
   </body>
 </html>
